<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/select_all"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_selection"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/clear_selection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_order"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chronological"
        android:checkable="true"
        android:title="@string/chronological"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_ignored"
        android:checkable="true"
        android:title="@string/show_ignored"
        app:showAsAction="never" />
</menu>
