<?xml version="1.0" encoding="utf-8"?>
<!-- Vektorové ikony namiesto zastaraných @android:drawable bitmap (líšili sa podľa OEM):
     ic_folder/ic_clock sú z Fossify commons (merged resources), ic_home (domček) a ic_explore (kompas) sú vlastné. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_vector"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_folders"
        android:icon="@drawable/ic_folder_vector"
        android:title="@string/nav_folders" />
    <item
        android:id="@+id/nav_recent"
        android:icon="@drawable/ic_clock_vector"
        android:title="@string/nav_recent" />
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore_vector"
        android:title="@string/nav_explore" />
</menu>
