<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_people"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_people_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/groups_filter"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/groups_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tag_faces"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/tag_faces_title"
        app:showAsAction="ifRoom" />
</menu>
